# api-testing-masterclass

./: .gitignore  README.md  pyproject.toml
mortgage_calculator/: mortgage.db  pyproject.toml  test_db.db
mortgage_calculator/app/: database.py  main.py  models.py  openapi.json  routes.py  schemas.py
mortgage_calculator/app/crud/: mortgage_crud.py  property_crud.py
mortgage_calculator/app/custom/: calculations.py  db_queries.py
mortgage_calculator/docker/: docker-compose.yml
mortgage_calculator/tests/: conftest.py  test_mortgage_crud.py  test_mortgage_payments.py  test_property_crud.py
mortgage_calculator/tests/crud/: test_crud_errors.py  test_mortgage_crud.py  test_property_crud.py  test_property_crud_errors.py
mortgage_calculator/tests/custom/: test_mortgage_payments.py
